[package]
name = "retoken-macros"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Build &str tokenizers using regex"
homepage = "https://github.com/evictionapp/retoken"
repository = "https://github.com/evictionapp/retoken"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
darling = "0.20.3"
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = "2.0.37"
